# code_puppy

./: .gitignore  AGENTS.md  hatch_build.py  pyproject.toml
.obsidian/: workspace.json
code_puppy/: cli_runner.py  config.py
code_puppy/agents/: _key_listeners.py
code_puppy/messaging/: bar_painters.py  bar_region.py  bar_rendering.py  bottom_bar.py  rich_renderer.py
code_puppy/plugins/: __init__.py  ejected_namespace.py  plugin_sync.py  precedence.py  shipped_manifest.py  sync_startup.py
code_puppy/plugins/agent_skills/: discovery.py  downloader.py  prompt_builder.py  register_callbacks.py  skill_catalog.py  skills_install_menu.py  skills_menu.py
code_puppy/plugins/bead_factory/: __init__.py  banner.py  beads.py  beads_reads.py  beads_writes.py  build_loop.py  build_result.py  build_state.py  chain_driver.py  close_guard.py  commands.py  execution_hints.py  fan_out_gate.py  goal_loop.py  inspector.py  inspector_config.py  inspectors_menu.py  inspectors_menu_form.py  (+8 more)
code_puppy/tools/: command_runner.py  skills_tools.py
docs/: ADR-001-plugin-first-architecture.md  EXTRACTION_AUDIT_SYNTHESIS.md  HARNESS_BOUNDARY_CRITERIA.md  MODEL_PROVIDER_LAYER_EXTRACTION_AUDIT.md  PLUGIN_EXTERNALIZATION_ALTERNATIVES.md  PLUGIN_EXTERNALIZATION_INVENTORY.md  PLUGIN_EXTERNALIZATION_SYNTHESIS.md  PLUGIN_HASH_AWARE_UPDATES.md  SERVICES_LAYER_EXTRACTION_AUDIT.md  TOOLS_LAYER_EXTRACTION_AUDIT.md  UI_LAYER_EXTRACTION_AUDIT.md
docs/adr/: 0001-bead-factory-canonical-vocabulary.md  0002-build-loop-judgment-result-transport.md
docs/fixes/: puppy_kennel-concurrent-writes.md
spikes/: bead-chain-catalog.md  bead-chain-pipeline-plugin-notes.md  goal-catalog.md  judges-catalog.md  possible-flow.canvas  synthesis-beadchain-goal-judges.md  synthesis-context-prompt-tools.md  wiggum-catalog.md
tests/: test_shell_line_crlf.py
tests/messaging/: test_bottom_bar.py  test_bottom_bar_cursor_aware.py
tests/plugins/: test_bead_factory_chain_ordering.py  test_bf_commands.py  test_builtin_import_convention.py  test_duplicate_user_plugin_skip.py  test_ejected_namespace.py  test_inspector_config.py  test_inspector_orchestration.py  test_judge_config.py  test_judge_orchestration.py  test_owned_copy_suppresses_builtin.py  test_plugin_contributions.py  test_plugin_list.py  test_plugin_sync.py  test_plugins_conflicts.py  test_plugins_eject.py  test_plugins_ejectable.py  test_plugins_init_coverage.py  test_prune_plugin.py  test_shipped_manifest.py  test_sync_startup.py  test_tier_collision_policy.py  test_user_plugin_relative_imports.py  test_wiggum_plugin.py
tools/: README_render_capture.md  menu_capture.py  render_capture.py  session_render_capture.py  svg_to_png.py
(+74 files in other folders)
